--- a/index.html
+++ b/index.html
@@ -89,32 +89,32 @@
 
                 <div class="row">
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up">
-                            <img src="assets/img/serv/01.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box iconmod" data-aos="fade-up">
+                            <img src="assets/img/serv/01.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Nosso diferencial</a></h4>
                             <p class="description">Realizamos a remoção dos sisos sob sedação subconsciente aliado ao médico anestesista para seu total conforto e segurança.</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                            <img src="assets/img/serv/02.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box iconmod" data-aos="fade-up" data-aos-delay="100">
+                            <img src="assets/img/serv/02.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Se livre dos Sisos</a></h4>
                             <p class="description">A permanência dos sisos pode causar dor, infecção recorrente, danos aos dentes vizinhos, cistos e tumores.</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                            <img src="assets/img/serv/03.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box iconmod" data-aos="fade-up" data-aos-delay="200">
+                            <img src="assets/img/serv/03.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Competência profissional</a></h4>
                             <p class="description">Seu procedimento nas mãos de um cirurgião que atua a nível hospitalar em cirurgias orais e maxilofaciais de alta complexidade.</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-                            <img src="assets/img/serv/04.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box iconmod" data-aos="fade-up" data-aos-delay="300">
+                            <img src="assets/img/serv/04.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Atendimento humanizado</a></h4>
                             <p class="description">O tratamento começa na consulta inicial, visando o acolhimento, conforto e esclarecimento do paciente até a data da cirurgia.</p>
                         </div>
@@ -130,16 +130,16 @@
 
                 <div class="row">
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box icon-box2" data-aos="fade-up">
-                            <img src="assets/img/serv/05.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box icon-box2 iconmod" data-aos="fade-up">
+                            <img src="assets/img/serv/05.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">A estética</a></h4>
                             <p class="description">A estética facial, o sorriso e o conforto na mordida que você procura. A Cirurgia Ortognática visa alcançar o melhor de cada paciente, trazendo o ideal estético e funcional para cada caso.</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box icon-box2" data-aos="fade-up" data-aos-delay="100">
-                            <img src="assets/img/serv/06.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box icon-box2 iconmod" data-aos="fade-up" data-aos-delay="100">
+                            <img src="assets/img/serv/06.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Conforto para tirar fotos</a></h4>
                             <p class="description">Tenha o perfil facial que tanto deseja. A Cirurgia Ortognática busca deixar as projeções faciais mais harmônicas suavizando seus contornos.
 
@@ -148,16 +148,16 @@
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box icon-box2" data-aos="fade-up" data-aos-delay="200">
-                            <img src="assets/img/serv/07.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box icon-box2 iconmod" data-aos="fade-up" data-aos-delay="200">
+                            <img src="assets/img/serv/07.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">Conforto para sorrir</a></h4>
                             <p class="description">Tenha seu sorriso dentro dos padrões estéticos e funcionais. O sorriso é nossa marca registrada! Otimize seu sorriso com a Ortognática.</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box icon-box2" data-aos="fade-up" data-aos-delay="300">
-                            <img src="assets/img/serv/08.jpg" class="img-fluid" style="float: left; padding-right: 20px;" alt="">
+                        <div class="icon-box icon-box2 iconmod" data-aos="fade-up" data-aos-delay="300">
+                            <img src="assets/img/serv/08.jpg" class="img-fluid imgserv" style="float: left; padding-right: 20px;" alt="">
                             <h4 class="title"><a href="">A Ortognática é para você?</a></h4>
                             <p class="description">Agende uma consulta e tire suas dúvidas. Esclarecimento baseados em experiência com respaldo científico. Porque sua cirurgia é coisa séria!</p>
                         </div>
