--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#testimonials">Depoimentos</a></li>
                     <li><a href="#team">Equipe</a></li>
                     <li><a href="#contact">Contato</a></li>
-                    <li style="background-color: #0f625d;"><a href="https://wa.me/5511988403231?text=Quero%20saber%20mais" target="_blank">Agende sua Consulta</a></li>
+                    <li style="background-color: #0f625d; color: #fff !important;"><a href="https://wa.me/5511988403231?text=Quero%20saber%20mais" target="_blank">Agende sua Consulta</a></li>
 
                 </ul>
             </nav>
