--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
                             <h3>Email</h3>
-                            <p>j.previati@gmail.com</p>
+                            <p>contato@drjpreviati.com.br</p>
                         </div>
                     </div>
 
