--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="section-title" data-aos="fade-in" data-aos-delay="100">
                     <h2>Sisos </h2>
-                    <strong><p> <span style="color:#b8860b ; font-weight: 800;">Procedimento com sedação</span>: Total segurança; Sem dor; Mínimo Inchaço.</p>
+                    <strong><p> <span style="color:#b8860b ; font-weight: 800;">Procedimento com sedação</span>: Total segurança; Sem dor.</p>
                     <p>Saiba abaixo a necessidade de remover os sisos e como nós trabalhamos!</p></strong>
                 </div>
 
