--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@
                                     <i class="icofont-hospital"></i>
                                     <span class="titicon">Residência Hospitalar </span>
                                     <p>Após aprovação na FUVEST comecei minha segunda pós-graduação no <span style="color:#b8860b ; font-weight: 800;">HU-USP onde concluí minha
-                                            residência em cirurgi e Traumatologia Bucomaxilofacial</span> , atuando quase 9 mil horas dentro do hospital entre atividades cirúrgicas, atendendo em pronto socorro, UTI, ambulatório, enfermarias e centro cirúrgico.</p>
+                                            residência em cirurgia e Traumatologia Bucomaxilofacial</span> , atuando quase 9 mil horas dentro do hospital entre atividades cirúrgicas, atendendo em pronto socorro, UTI, ambulatório, enfermarias e centro
+                                        cirúrgico.
+                                    </p>
                                 </div>
                                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                                     <i class="icofont-skull-face"></i>
