--- a/teste.html
+++ b/teste.html
@@ -367,6 +367,7 @@
     <link rel="stylesheet" id="ekit-responsive-css" href="./Ortognatica - Dr. Jhosepher Previati_files/responsive.css" type="text/css" media="all">
     <link rel="stylesheet" id="google-fonts-1-css" href="./Ortognatica - Dr. Jhosepher Previati_files/css" type="text/css" media="all">
     <link rel="stylesheet" id="elementor-icons-shared-0-css" href="./Ortognatica - Dr. Jhosepher Previati_files/fontawesome.min.css" type="text/css" media="all">
+    <link href="./assets/vendor/icofont/icofont.min.css" rel="stylesheet">
     <link rel="stylesheet" id="elementor-icons-fa-solid-css" href="./Ortognatica - Dr. Jhosepher Previati_files/solid.min.css" type="text/css" media="all">
     <link rel="stylesheet" id="elementor-icons-fa-brands-css" href="./Ortognatica - Dr. Jhosepher Previati_files/brands.min.css" type="text/css" media="all">
     <script type="text/javascript" src="./Ortognatica - Dr. Jhosepher Previati_files/jquery.min.js.transferir" id="jquery-core-js"></script>
@@ -3000,12 +3001,12 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                             font-size: 59px
                                         }
                                     </style>
-                                    <h2 class="elementor-heading-title elementor-size-default">Cirurgia Ortognática:</h2>
+                                    <h2 class="elementor-heading-title elementor-size-default">O Sonho da Cirurgia Ortognática!</h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-906c91a elementor-widget elementor-widget-heading" data-id="906c91a" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default">Realize o sonho da sua Ortognática com rápida recuperação alta tecnologia</h2>
+                                    <h2 class="elementor-heading-title elementor-size-default" style="font-size: 20px;">O melhor da estética facial aliado a função mastigatória. <br> Realize a sua cirurgia com uma equipe esperiente e qualificada. </h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-bc34e0c elementor-align-left elementor-mobile-align-justify elementor-widget elementor-widget-button" data-id="bc34e0c" data-element_type="widget" data-widget_type="button.default">
@@ -3013,8 +3014,9 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                     <div class="elementor-button-wrapper">
                                         <a href="https://api.whatsapp.com/send?phone=5511969830473" class="elementor-button-link elementor-button elementor-size-sm" role="button">
                                             <span class="elementor-button-content-wrapper">
-						<span class="elementor-button-icon elementor-align-icon-right">
-				<i aria-hidden="true" class="fas fa-long-arrow-alt-right"></i>			</span>
+						                        <span class="elementor-button-icon elementor-align-icon-right">
+                                                    <i class="icofont-location-arrow"></i>			
+                                                </span>
                                             <span class="elementor-button-text">Agendar consulta</span>
                                             </span>
                                         </a>
