--- a/ortognatica.html
+++ b/ortognatica.html
@@ -4061,11 +4061,14 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
 															<span class="elementor-toggle-icon-closed"><i class="icofont-plus-circle"></i></span>
                                                 <span class="elementor-toggle-icon-opened"><i class="icofont-minus-circle"></i></span>
                                                 </span>
-                                                <a href="https://drromulofischer.com/cirurgia-ortognatica/" class="elementor-toggle-title">O que é cirurgia ortognática?</a>
+                                                <a href="https://drromulofischer.com/cirurgia-ortognatica/" class="elementor-toggle-title">O que é a cirurgia ortognática?</a>
                                             </h3>
 
                                             <div id="elementor-tab-content-2191" class="elementor-tab-content elementor-clearfix" data-tab="1" role="tabpanel" aria-labelledby="elementor-tab-title-2191">
-                                                <p>É uma cirurgia que tem como objetivo a melhora da estética facial e o correto encaixe dos dentes, que são obtidos através do reposicionamento dos maxilares (maxila e mandíbula).</p>
+                                                <p>A Cirurgia Ortognática é um procedimento estético-funcional que visa melhorar a oclusão do paciente (encaixe dos dentes) e tem como consequência a melhora da estética e proporção do terço médio da face (maxila)
+                                                    e terço inferior da face (mandíbula e mento). Há casos que paciente com Apnéia Obstrutiva do Sono se beneficia da Cirurgia Ortognátia por melhora da passagem de ar nas vias aéreas superiores. Contudo
+                                                    é necessário antes passar em consulta com o médico Otorrinolaringologista para descartar outras causas e tratamentos.
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="elementor-toggle-item">
