--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3977,7 +3977,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                         <div class="elementor-widget-wrap elementor-element-populated">
                             <div class="elementor-element elementor-element-35f34c4 elementor-widget elementor-widget-heading" data-id="35f34c4" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default">Dúvidas Frequentes Sobre a Ortognática (FAQ)</h2>
+                                    <h2 class="elementor-heading-title elementor-size-default">Dúvidas Frequentes Sobre a Cirurgia Ortognática</h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-d0f58a5 elementor-widget elementor-widget-toggle" data-id="d0f58a5" data-element_type="widget" data-widget_type="toggle.default">
@@ -3992,7 +3992,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                             line-height: 1;
                                             margin: 0;
                                             padding: 15px;
-                                            border-bottom: 1px solid #d4d4d4;
+                                            border-bottom: 1px solid #b91616;
                                             cursor: pointer;
                                             outline: none
                                         }
