--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3358,7 +3358,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                             <div class="elementor-element elementor-element-c79aa30 elementor-widget__width-inherit elementor-absolute elementor-hidden-mobile elementor-widget elementor-widget-image" data-id="c79aa30" data-element_type="widget" data-settings="{&quot;_position&quot;:&quot;absolute&quot;}"
                                 data-widget_type="image.default">
                                 <div class="elementor-widget-container">
-                                    <img width="28" height="29" src="./assets/img/torto/img.1.psd" class="attachment-full size-full" alt="" loading="lazy"> </div>
+                                    <img width="28" height="29" src="./Ortognatica - Dr. Jhosepher Previati_files/fundo-text-vantagens2.svg" class="attachment-full size-full" alt="" loading="lazy"> </div>
                             </div>
                             <div class="elementor-element elementor-element-84cd58c elementor-widget elementor-widget-text-editor" data-id="84cd58c" data-element_type="widget" data-widget_type="text-editor.default">
                                 <div class="elementor-widget-container">
