--- a/ortognatica.html
+++ b/ortognatica.html
@@ -1482,8 +1482,8 @@
                     }
                 </style>
 
-                <button id="rd-WMrK9QNCvowKqrGTmz96Vw" aria-label="Abrir WhatsApp" class="bricks--floating--button rdstation-popup-js-floating-button shake">
-</button>
+                <a id="rd-WMrK9QNCvowKqrGTmz96Vw" href="https://api.whatsapp.com/send/?phone=5511988403231&text=Quero+saber+mais&app_absent=0" aria-label="Abrir WhatsApp" class="bricks--floating--button rdstation-popup-js-floating-button shake">
+                </a>
 
 
                 <style type="text/css" rel="stylesheet">
@@ -3086,10 +3086,10 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-4089cab" data-id="4089cab" data-element_type="column">
+                                    <div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-427db3b" data-id="427db3b" data-element_type="column">
                                         <div class="elementor-widget-wrap elementor-element-populated">
-                                            <div class="elemenetor-element elementor-element-b8e7bf4 elementor-cta--skin-cover elementor-cta--valign-middle elementor-widget elementor-widget-call-to-action" data-id="b8e7bf4" data-element_type="widget" data-widget_type="call-to-action.default">
-                                                <div class="elmentor-widget-container">
+                                            <div class="elementor-element elementor-element-5ac6f57 elementor-cta--skin-cover elementor-cta--valign-middle elementor-widget elementor-widget-call-to-action" data-id="5ac6f57" data-element_type="widget" data-widget_type="call-to-action.default">
+                                                <div class="elementor-widget-container">
                                                     <div class="elementor-cta">
                                                         <div class="elementor-cta__bg-wrapper">
                                                             <div class="elementor-cta__bg elementor-bg" style="background-image: url(./assets/img/torto/torto04.jpg);"></div>
@@ -3098,7 +3098,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                                         <div class="elementor-cta__content">
 
                                                             <h2 class="elementor-cta__title elementor-cta__content-item elementor-content-item">
-                                                                Sorriso Gengival </h2>
+                                                                Sorriso Gengival</h2>
 
                                                             <div class="elementor-cta__description elementor-cta__content-item elementor-content-item">
                                                             </div>
@@ -3109,6 +3109,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
                             </section>
                         </div>
