--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3765,6 +3765,14 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                     </div>
                                 </a>
                             </div>
+                            <div class="col-lg-3 col-md-6">
+                                <a href="https://instagram.com/dr.jpreviati?igshid=YmMyMTA2M2Y=" target="_blank" class="btwhats">
+                                    <div class="info-box  mb-4">
+                                        <i class="bx bx-phone-call"></i>
+                                        <h3>Instagran</h3>
+                                    </div>
+                                </a>
+                            </div>
 
                         </div>
                     </div>
