--- a/ortognatica.html
+++ b/ortognatica.html
@@ -2649,7 +2649,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                             </div>
                             <div class="elementor-element elementor-element-906c91a elementor-widget elementor-widget-heading" data-id="906c91a" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default" style="font-size: 20px;">O melhor da estética facial aliado a função mastigatória. <br> Realize a sua cirurgia com uma equipe esperiente e qualificada. </h2>
+                                    <h2 class="elementor-heading-title elementor-size-default" style="font-size: 20px;">O melhor da estética facial aliado a função mastigatória. <br> Realize a sua cirurgia com uma equipe experiente e qualificada. </h2>
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-bc34e0c elementor-align-left elementor-mobile-align-justify elementor-widget elementor-widget-button" data-id="bc34e0c" data-element_type="widget" data-widget_type="button.default">
@@ -2866,7 +2866,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                                     <div class="swiper-slide-inner">
                                                         <div class="swiper-slide-contents animated fadeInUp" style="">
                                                             <div class="elementor-slide-heading">Harmonia facial!</div>
-                                                            <div class="elementor-slide-description">Proporção maxilo facial nos padrões estéticos.</div>
+                                                            <div class="elementor-slide-description">Proporção maxilofacial nos padrões estéticos.</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2976,7 +2976,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                         <div class="elementor-widget-wrap elementor-element-populated">
                             <div class="elementor-element elementor-element-2c31e04 elementor-widget elementor-widget-text-editor" data-id="2c31e04" data-element_type="widget" data-widget_type="text-editor.default">
                                 <div class="elementor-widget-container">
-                                    <p>A ortognática é uma cirurgia realizada inteiramente por dentro da boca, sem cicatrizes visíveis e coberta por qualquer plano de saúde com cobertura hospitalar.&nbsp;<span style="letter-spacing: 0px;">O principal objetivo do procedimento é corrigir a mordida e posicionar os maxilares de tal forma que resultem na melhor estética facial possível.</span></p>
+                                    <p>A ortognática é uma cirurgia realizada inteiramente por dentro da boca, sem cicatrizes visíveis e coberta por qualquer plano de saúde que tenha cobertura hospitalar.&nbsp;<span style="letter-spacing: 0px;">O principal objetivo do procedimento é corrigir a mordida e posicionar os maxilares de tal forma que resultem na melhor estética facial possível.</span></p>
                                     <p>Dentre as indicações, podemos destacar: queixo pequeno, queixo grande, queixo torto, excesso de gengiva no sorriso ou mostrar pouco os dentes ao sorrir.</p>
                                 </div>
                             </div>
@@ -3005,7 +3005,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                             </div>
                             <div class="elementor-element elementor-element-84cd58c elementor-widget elementor-widget-text-editor" data-id="84cd58c" data-element_type="widget" data-widget_type="text-editor.default">
                                 <div class="elementor-widget-container">
-                                    <p>A cirurgia é indicada para pessoas com queixo torto, grande ou pequeno de mais.</p>
+                                    <p>A cirurgia é indicada para pessoas com queixo torto, grande ou pequeno demais.</p>
 
                                 </div>
                             </div>
@@ -3379,7 +3379,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
 
                                             <div id="elementor-tab-content-2191" class="elementor-tab-content elementor-clearfix" data-tab="1" role="tabpanel" aria-labelledby="elementor-tab-title-2191">
                                                 <p>A Cirurgia Ortognática é um procedimento estético-funcional que visa melhorar a oclusão do paciente (encaixe dos dentes) e tem como consequência a melhora da estética e proporção do terço médio da face (maxila)
-                                                    e terço inferior da face (mandíbula e mento). Há casos que paciente com Apnéia Obstrutiva do Sono se beneficia da Cirurgia Ortognátia por melhora da passagem de ar nas vias aéreas superiores. Contudo
+                                                    e terço inferior da face (mandíbula e mento). Há casos que pacientes com Apnéia Obstrutiva do Sono se beneficia da Cirurgia Ortognátia por melhora da passagem de ar nas vias aéreas superiores. Contudo
                                                     é necessário antes passar em consulta com o médico Otorrinolaringologista para descartar outras causas e tratamentos.
                                                 </p>
                                             </div>
@@ -3390,7 +3390,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
 															<span class="elementor-toggle-icon-closed"><i class="icofont-plus-circle"></i></span>
                                                 <span class="elementor-toggle-icon-opened"><i class="icofont-minus-circle"></i></span>
                                                 </span>
-                                                <a href="https://www.drjpreviati.com.br/ortognatica.html" class="elementor-toggle-title">O Convênio cobre a Cirurgia Ortognática?</a>
+                                                <a href="https://www.drjpreviati.com.br/ortognatica.html" class="elementor-toggle-title">O convênio cobre a Cirurgia Ortognática?</a>
                                             </h3>
 
                                             <div id="elementor-tab-content-2192" class="elementor-tab-content elementor-clearfix" data-tab="2" role="tabpanel" aria-labelledby="elementor-tab-title-2192">
@@ -3403,7 +3403,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
 															<span class="elementor-toggle-icon-closed"><i class="icofont-plus-circle"></i></span>
                                                 <span class="elementor-toggle-icon-opened"><i class="icofont-minus-circle"></i></span>
                                                 </span>
-                                                <a href="https://www.drjpreviati.com.br/ortognatica.html" class="elementor-toggle-title">A Consulta de Avaliação é Cobrada?</a>
+                                                <a href="https://www.drjpreviati.com.br/ortognatica.html" class="elementor-toggle-title">A consulta de Avaliação é Cobrada?</a>
                                             </h3>
 
                                             <div id="elementor-tab-content-2193" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-2193">
