--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3769,7 +3769,7 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                 <a href="https://instagram.com/dr.jpreviati?igshid=YmMyMTA2M2Y=" target="_blank" class="btwhats">
                                     <div class="info-box  mb-4">
                                         <i class="bx bx-phone-call"></i>
-                                        <h3>Instagran</h3>
+                                        <h3>instagram</h3>
                                     </div>
                                 </a>
                             </div>
