--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3748,13 +3748,13 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                 </div>
                             </div>
 
-                            <div class="col-lg-3 col-md-6">
+                            <!-- <div class="col-lg-3 col-md-6">
                                 <div class="info-box  mb-4">
                                     <i class="bx bx-envelope"></i>
                                     <h3>Email</h3>
                                     <p>contato@drjpreviati.com.br</p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="col-lg-3 col-md-6">
                                 <a href="https://wa.me/5511988403231?text=Quero%20saber%20mais" target="_blank" class="btwhats">
