--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
                             <h3>Endereço</h3>
-                            <p>Rua Darwin, 569 - Jardim Santo Amaro, São Paulo - SP, 04741-011</p>
+                            <p>Av. Mal. Floriano Peixoto, 347 - sala 705 - Centro, São José dos Campos - SP, 12210-030</p>
                         </div>
                     </div>
 
@@ -468,7 +468,7 @@
                             <div class="info-box  mb-4">
                                 <i class="bx bx-phone-call"></i>
                                 <h3>Telefone</h3>
-                                <p>+55 11 98840-3231</p>
+                                <p>+55 11 91318-8581</p>
                             </div>
                         </a>
                     </div>
