--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
-                    <div class="col-lg-8">
+                    <div class="col-lg-5">
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
                             <h3>Endereço</h3>
@@ -455,13 +455,13 @@
                         </div>
                     </div>
 
-                    <!-- <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
                             <h3>Email</h3>
                             <p>contato@drjpreviati.com.br</p>
                         </div>
-                    </div> -->
+                    </div>
 
                     <div class="col-lg-4">
                         <a href="https://wa.me/5511988403231?text=Quero%20saber%20mais" target="_blank" class="btwhats">
