--- a/ortognatica.html
+++ b/ortognatica.html
@@ -3744,24 +3744,24 @@ bytEcitSJUMzJUI0bXVsby4ifX0=
                                 <div class="info-box mb-4">
                                     <i class="bx bx-map"></i>
                                     <h3>Endereço</h3>
-                                    <p>Rua Darwin, 569 - Jardim Santo Amaro, São Paulo - SP, 04741-011</p>
+                                    <p>Av. Mal. Floriano Peixoto, 347 - sala 705 - Centro, São José dos Campos - SP, 12210-030</p>
                                 </div>
                             </div>
 
-                            <!-- <div class="col-lg-3 col-md-6">
+                            <div class="col-lg-3 col-md-6">
                                 <div class="info-box  mb-4">
                                     <i class="bx bx-envelope"></i>
                                     <h3>Email</h3>
                                     <p>contato@drjpreviati.com.br</p>
                                 </div>
-                            </div> -->
+                            </div>
 
                             <div class="col-lg-3 col-md-6">
                                 <a href="https://wa.me/5511988403231?text=Quero%20saber%20mais" target="_blank" class="btwhats">
                                     <div class="info-box  mb-4">
                                         <i class="bx bx-phone-call"></i>
                                         <h3>Telefone</h3>
-                                        <p>+55 11 98840-3231</p>
+                                        <p>+55 11 91318-8581</p>
                                     </div>
                                 </a>
                             </div>
